--- a/Topic 13 - TensorFlow/ch13_part1.ipynb
+++ b/Topic 13 - TensorFlow/ch13_part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "source": [
     "import tensorflow as tf\r\n",
     "print('TensorFlow version:', tf.__version__)\r\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "source": [
     "a = np.array([1, 2, 3], dtype=np.int32)\r\n",
     "b = [4, 5, 6]\r\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "source": [
     "tf.is_tensor(a), tf.is_tensor(t_a)"
    ],
@@ -68,14 +68,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 3
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "source": [
     "t_ones = tf.ones((2, 3))\r\n",
     "\r\n",
@@ -90,14 +90,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "source": [
     "t_ones.numpy()"
    ],
@@ -111,14 +111,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "source": [
     "const_tensor = tf.constant([1.2, 5, np.pi], dtype=tf.float32)\r\n",
     "\r\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "source": [
     "t_a_new = tf.cast(t_a, tf.int64)\r\n",
     "\r\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "source": [
     "t = tf.random.uniform(shape=(3, 5))\r\n",
     "\r\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "source": [
     "t = tf.zeros((30,))\r\n",
     "\r\n",
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "source": [
     "t = tf.zeros((1, 2, 1, 4, 1))\r\n",
     "\r\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "source": [
     "tf.random.set_seed(1)\r\n",
     "\r\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "source": [
     "print(t1.numpy())\r\n",
     "print(t2.numpy())"
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "source": [
     "# Elementwise multiplication\r\n",
     "t3 = tf.multiply(t1, t2).numpy()\r\n",
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "source": [
     "t4 = tf.math.reduce_mean(t1, axis=0)\r\n",
     "\r\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "source": [
     "t5 = tf.linalg.matmul(t1, t2, transpose_b=True)\r\n",
     "\r\n",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "source": [
     "t6 = tf.linalg.matmul(t1, t2, transpose_a=True)\r\n",
     "\r\n",
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "source": [
     "norm_t1 = tf.norm(t1, ord=2, axis=1).numpy()\r\n",
     "\r\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "source": [
     "np.sqrt(np.sum(np.square(t1), axis=1))"
    ],
@@ -393,7 +393,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 18
     }
    ],
    "metadata": {}
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "source": [
     "tf.random.set_seed(1)\r\n",
     "\r\n",
@@ -437,14 +437,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 19
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "source": [
     "tf.random.set_seed(1)\r\n",
     "t = tf.random.uniform((5,))\r\n",
@@ -472,14 +472,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 20
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "source": [
     "t = tf.random.uniform((6,4))\r\n",
     "\r\n",
@@ -496,26 +496,26 @@
      "name": "stdout",
      "text": [
       "tf.Tensor(\n",
-      "[[0.522 0.167 0.692 0.034]\n",
-      " [0.602 0.26  0.802 0.689]\n",
-      " [0.358 0.78  0.546 0.078]\n",
-      " [0.279 0.164 0.575 0.68 ]\n",
-      " [0.995 0.602 0.656 0.642]\n",
-      " [0.347 0.036 0.83  0.537]], shape=(6, 4), dtype=float32)\n",
+      "[[0.51  0.444 0.409 0.992]\n",
+      " [0.689 0.346 0.436 0.601]\n",
+      " [0.457 0.753 0.188 0.549]\n",
+      " [0.549 0.55  0.28  0.109]\n",
+      " [0.631 0.874 0.532 0.561]\n",
+      " [0.294 0.928 0.11  0.964]], shape=(6, 4), dtype=float32)\n",
       "tf.Tensor(\n",
-      "[[0.522 0.167]\n",
-      " [0.602 0.26 ]\n",
-      " [0.358 0.78 ]\n",
-      " [0.279 0.164]\n",
-      " [0.995 0.602]\n",
-      " [0.347 0.036]], shape=(6, 2), dtype=float32)\n",
+      "[[0.51  0.444]\n",
+      " [0.689 0.346]\n",
+      " [0.457 0.753]\n",
+      " [0.549 0.55 ]\n",
+      " [0.631 0.874]\n",
+      " [0.294 0.928]], shape=(6, 2), dtype=float32)\n",
       "tf.Tensor(\n",
-      "[[0.692 0.034]\n",
-      " [0.802 0.689]\n",
-      " [0.546 0.078]\n",
-      " [0.575 0.68 ]\n",
-      " [0.656 0.642]\n",
-      " [0.83  0.537]], shape=(6, 2), dtype=float32)\n"
+      "[[0.409 0.992]\n",
+      " [0.436 0.601]\n",
+      " [0.188 0.549]\n",
+      " [0.28  0.109]\n",
+      " [0.532 0.561]\n",
+      " [0.11  0.964]], shape=(6, 2), dtype=float32)\n"
      ]
     }
    ],
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "source": [
     "A = tf.ones((3,))\r\n",
     "B = tf.zeros((2,))\r\n",
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "source": [
     "A = tf.ones((3,))\r\n",
     "B = tf.zeros((3,))\r\n",
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "source": [
     "a = [1.2, 3.4, 7.5, 4.1, 5.0, 1.0]\r\n",
     "\r\n",
@@ -589,29 +589,59 @@
     "\r\n",
     "print(ds)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<TensorSliceDataset shapes: (), types: tf.float32>\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "source": [
     "for item in ds:\r\n",
     "    print(item)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tf.Tensor(1.2, shape=(), dtype=float32)\n",
+      "tf.Tensor(3.4, shape=(), dtype=float32)\n",
+      "tf.Tensor(7.5, shape=(), dtype=float32)\n",
+      "tf.Tensor(4.1, shape=(), dtype=float32)\n",
+      "tf.Tensor(5.0, shape=(), dtype=float32)\n",
+      "tf.Tensor(1.0, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "source": [
-    "ds_batch = ds.batch(3)\n",
-    "\n",
-    "for i, elem in enumerate(ds_batch, 1):\n",
+    "ds_batch = ds.batch(3)\r\n",
+    "\r\n",
+    "for i, elem in enumerate(ds_batch, 1):\r\n",
     "    print('batch {}:'.format(i), elem.numpy())"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "batch 1: [1.2 3.4 7.5]\n",
+      "batch 2: [4.1 5.  1. ]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -623,57 +653,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "source": [
-    "tf.random.set_seed(1)\n",
-    "\n",
-    "t_x = tf.random.uniform([4, 3], dtype=tf.float32)\n",
-    "t_y = tf.range(4)"
+    "tf.random.set_seed(1)\r\n",
+    "\r\n",
+    "t_x = tf.random.uniform([4, 3], dtype=tf.float32)\r\n",
+    "t_y = tf.range(4)\r\n",
+    "\r\n",
+    "print(t_x)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tf.Tensor(\n",
+      "[[0.165 0.901 0.631]\n",
+      " [0.435 0.292 0.643]\n",
+      " [0.976 0.435 0.66 ]\n",
+      " [0.605 0.637 0.614]], shape=(4, 3), dtype=float32)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "source": [
-    "ds_x = tf.data.Dataset.from_tensor_slices(t_x)\n",
-    "ds_y = tf.data.Dataset.from_tensor_slices(t_y)\n",
-    "    \n",
-    "ds_joint = tf.data.Dataset.zip((ds_x, ds_y))\n",
-    "\n",
-    "for example in ds_joint:\n",
-    "    print('  x: ', example[0].numpy(), \n",
-    "          '  y: ', example[1].numpy())"
+    "ds = tf.data.Dataset.from_tensor_slices(tf.random.uniform([9, 3], dtype=tf.float32))\r\n",
+    "dsBatch = ds.batch(3)\r\n",
+    "\r\n",
+    "\r\n",
+    "for i in dsBatch:\r\n",
+    "    print(i)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tf.Tensor(\n",
+      "[[0.992 0.989 0.57 ]\n",
+      " [0.793 0.09  0.842]\n",
+      " [0.822 0.859 0.146]], shape=(3, 3), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[0.902 0.418 0.756]\n",
+      " [0.318 0.754 0.027]\n",
+      " [0.626 0.067 0.368]], shape=(3, 3), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[0.8   0.261 0.37 ]\n",
+      " [0.726 0.628 0.348]\n",
+      " [0.411 0.031 0.991]], shape=(3, 3), dtype=float32)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "source": [
-    "## method 2:\n",
-    "ds_joint = tf.data.Dataset.from_tensor_slices((t_x, t_y))\n",
-    "\n",
-    "for example in ds_joint:\n",
-    "    print('  x: ', example[0].numpy(), \n",
+    "ds_x = tf.data.Dataset.from_tensor_slices(t_x)\r\n",
+    "ds_y = tf.data.Dataset.from_tensor_slices(t_y)\r\n",
+    "    \r\n",
+    "ds_joint = tf.data.Dataset.zip((ds_x, ds_y))\r\n",
+    "\r\n",
+    "for example in ds_joint:\r\n",
+    "    print('  x: ', example[0].numpy(), \r\n",
     "          '  y: ', example[1].numpy())"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  x:  [0.165 0.901 0.631]   y:  0\n",
+      "  x:  [0.435 0.292 0.643]   y:  1\n",
+      "  x:  [0.976 0.435 0.66 ]   y:  2\n",
+      "  x:  [0.605 0.637 0.614]   y:  3\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "source": [
-    "ds_trans = ds_joint.map(lambda x, y: (x*2-1.0, y))\n",
-    "\n",
-    "for example in ds_trans:\n",
-    "    print('  x: ', example[0].numpy(), \n",
+    "## method 2:\r\n",
+    "ds_joint = tf.data.Dataset.from_tensor_slices((t_x, t_y))\r\n",
+    "\r\n",
+    "for example in ds_joint:\r\n",
+    "    print('  x: ', example[0].numpy(), \r\n",
     "          '  y: ', example[1].numpy())"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  x:  [0.165 0.901 0.631]   y:  0\n",
+      "  x:  [0.435 0.292 0.643]   y:  1\n",
+      "  x:  [0.976 0.435 0.66 ]   y:  2\n",
+      "  x:  [0.605 0.637 0.614]   y:  3\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "source": [
+    "ds_trans = ds_joint.map(lambda x, y: (x*2-1.0, y))\r\n",
+    "\r\n",
+    "for example in ds_trans:\r\n",
+    "    print('  x: ', example[0].numpy(), \r\n",
+    "          '  y: ', example[1].numpy())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  x:  [-0.67   0.803  0.262]   y:  0\n",
+      "  x:  [-0.131 -0.416  0.285]   y:  1\n",
+      "  x:  [ 0.952 -0.13   0.32 ]   y:  2\n",
+      "  x:  [0.21  0.273 0.229]   y:  3\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -685,42 +795,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "source": [
-    "tf.random.set_seed(1)\n",
-    "ds = ds_joint.shuffle(buffer_size=len(t_x))\n",
-    "\n",
-    "for example in ds:\n",
-    "    print('  x: ', example[0].numpy(), \n",
+    "tf.random.set_seed(1)\r\n",
+    "ds = ds_joint.shuffle(buffer_size=len(t_x))\r\n",
+    "\r\n",
+    "for example in ds:\r\n",
+    "    print('  x: ', example[0].numpy(), \r\n",
     "          '  y: ', example[1].numpy())"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  x:  [0.976 0.435 0.66 ]   y:  2\n",
+      "  x:  [0.435 0.292 0.643]   y:  1\n",
+      "  x:  [0.165 0.901 0.631]   y:  0\n",
+      "  x:  [0.605 0.637 0.614]   y:  3\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "source": [
-    "ds = ds_joint.batch(batch_size=3,\n",
-    "                    drop_remainder=False)\n",
-    "\n",
-    "batch_x, batch_y = next(iter(ds))\n",
-    "\n",
-    "print('Batch-x: \\n', batch_x.numpy())\n",
-    "\n",
+    "ds = ds_joint.batch(batch_size=3,\r\n",
+    "                    drop_remainder=False)\r\n",
+    "\r\n",
+    "batch_x, batch_y = next(iter(ds))\r\n",
+    "\r\n",
+    "print('Batch-x: \\n', batch_x.numpy())\r\n",
+    "\r\n",
     "print('Batch-y:   ', batch_y.numpy())"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Batch-x: \n",
+      " [[0.165 0.901 0.631]\n",
+      " [0.435 0.292 0.643]\n",
+      " [0.976 0.435 0.66 ]]\n",
+      "Batch-y:    [0 1 2]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "ds = ds_joint.batch(3).repeat(count=2)\n",
-    "\n",
-    "for i,(batch_x, batch_y) in enumerate(ds):\n",
-    "    print(i, batch_x.shape, batch_y.numpy())\n"
+    "ds = ds_joint.batch(3).repeat(count=2)\r\n",
+    "\r\n",
+    "for i,(batch_x, batch_y) in enumerate(ds):\r\n",
+    "    print(i, batch_x.shape, batch_y.numpy())\r\n"
    ],
    "outputs": [],
    "metadata": {}
