--- a/Topic 02 - Classification/T22_Logistic_Regression_Iris_Full.ipynb
+++ b/Topic 02 - Classification/T22_Logistic_Regression_Iris_Full.ipynb
@@ -25,54 +25,52 @@
  "nbformat_minor": 2,
  "cells": [
   {
-   "source": [
-    "# Logistic Regression\n",
-    "- Iris dataset\n",
-    "- Binary classification"
-   ],
    "cell_type": "markdown",
+   "source": [
+    "# Logistic Regression\r\n",
+    "- Iris dataset\r\n",
+    "- Multiclass"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn import datasets\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "import numpy as np\r\n",
+    "import pandas as pd\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "from sklearn import datasets\r\n",
+    "from sklearn.model_selection import train_test_split\r\n",
+    "from sklearn.preprocessing import StandardScaler\r\n",
+    "from sklearn.linear_model import LogisticRegression\r\n",
     "from sklearn.metrics import accuracy_score"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Load data\n",
-    "iris = datasets.load_iris()\n",
-    "X = iris.data\n",
-    "y = iris.target\n",
-    "# Split data into training and testing data\n",
-    "X_train, X_test, y_train, y_test = train_test_split( X, y, test_size=0.3, random_state=1, stratify=y)\n",
-    "# Standardization\n",
-    "sc = StandardScaler()\n",
-    "sc.fit(X_train)\n",
-    "X_train_std = sc.transform(X_train)\n",
+    "# Load data\r\n",
+    "iris = datasets.load_iris()\r\n",
+    "X = iris.data\r\n",
+    "y = iris.target\r\n",
+    "# Split data into training and testing data\r\n",
+    "X_train, X_test, y_train, y_test = train_test_split( X, y, test_size=0.3, random_state=1, stratify=y)\r\n",
+    "# Standardization\r\n",
+    "sc = StandardScaler()\r\n",
+    "sc.fit(X_train)\r\n",
+    "X_train_std = sc.transform(X_train)\r\n",
     "X_test_std = sc.transform(X_test)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "paramSet = {\n",
     "    \"ex1\": {\"solver\": \"lbfgs\", \"C\": 0.0001, \"max_iter\": 100},\n",
@@ -81,21 +79,13 @@
     "    \"ex4\": {\"solver\": \"lbfgs\", \"C\": 100, \"max_iter\": 100},\n",
     "    \"ex5\": {\"solver\": \"lbfgs\", \"C\": 10000, \"max_iter\": 100},\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Parameters: {'solver': 'lbfgs', 'C': 0.0001, 'max_iter': 100}\nMisclassified examples: 11\nAccuracy score: 0.7555555555555555\nNorm of W: 0.010276153466532295\n--------------------------------------------------\nParameters: {'solver': 'lbfgs', 'C': 0.01, 'max_iter': 100}\nMisclassified examples: 9\nAccuracy score: 0.8\nNorm of W: 0.5547892528906797\n--------------------------------------------------\nParameters: {'solver': 'lbfgs', 'C': 1, 'max_iter': 100}\nMisclassified examples: 1\nAccuracy score: 0.9777777777777777\nNorm of W: 4.2297515456336825\n--------------------------------------------------\nParameters: {'solver': 'lbfgs', 'C': 100, 'max_iter': 100}\nMisclassified examples: 0\nAccuracy score: 1.0\nNorm of W: 13.779030469282961\n--------------------------------------------------\nParameters: {'solver': 'lbfgs', 'C': 10000, 'max_iter': 100}\nMisclassified examples: 0\nAccuracy score: 1.0\nNorm of W: 20.626560556560612\n--------------------------------------------------\n"
-     ]
-    }
-   ],
    "source": [
     "for paramName, paramValue in paramSet.items():\n",
     "    lr = LogisticRegression(\n",
@@ -123,7 +113,41 @@
     "    print(f\"Accuracy score: {accuracyScore}\")\n",
     "    print(f\"Norm of W: {np.linalg.norm(lr.coef_)}\")\n",
     "    print(f\"--------------------------------------------------\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Parameters: {'solver': 'lbfgs', 'C': 0.0001, 'max_iter': 100}\n",
+      "Misclassified examples: 11\n",
+      "Accuracy score: 0.7555555555555555\n",
+      "Norm of W: 0.010276153466532295\n",
+      "--------------------------------------------------\n",
+      "Parameters: {'solver': 'lbfgs', 'C': 0.01, 'max_iter': 100}\n",
+      "Misclassified examples: 9\n",
+      "Accuracy score: 0.8\n",
+      "Norm of W: 0.5547892528906797\n",
+      "--------------------------------------------------\n",
+      "Parameters: {'solver': 'lbfgs', 'C': 1, 'max_iter': 100}\n",
+      "Misclassified examples: 1\n",
+      "Accuracy score: 0.9777777777777777\n",
+      "Norm of W: 4.2297515456336825\n",
+      "--------------------------------------------------\n",
+      "Parameters: {'solver': 'lbfgs', 'C': 100, 'max_iter': 100}\n",
+      "Misclassified examples: 0\n",
+      "Accuracy score: 1.0\n",
+      "Norm of W: 13.779030469282961\n",
+      "--------------------------------------------------\n",
+      "Parameters: {'solver': 'lbfgs', 'C': 10000, 'max_iter': 100}\n",
+      "Misclassified examples: 0\n",
+      "Accuracy score: 1.0\n",
+      "Norm of W: 20.626560556560612\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ]
 }
