--- a/Topic 02 - Classification/T31_SVM_Linear_Iris_Multiclass.ipynb
+++ b/Topic 02 - Classification/T31_SVM_Linear_Iris_Multiclass.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Support Vector Machine\r\n",
+    "- Iris dataset\r\n",
+    "- 2 features\r\n",
+    "- Multiclass"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "source": [
