--- a/Topic 02 - Classification/T34_SVM_CNC.ipynb
+++ b/Topic 02 - Classification/T34_SVM_CNC.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "interpreter": {
-   "hash": "ef7f9a8012d9131766e31894c279374cc63c73121ed4db3b9e67a294a4bf0e74"
+   "hash": "be725e0de8fb3f5fda9b0118bdf797fa9814e28e467c1cce77c5b9910d8a1786"
   }
  },
  "nbformat": 4,
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "source": [
     "import numpy as np\r\n",
     "import matplotlib.pyplot as plt\r\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "source": [
     "saveFolder = 'Data_CNC_processed'\r\n",
     "filename = 'pred_machining_process'\r\n",
@@ -218,14 +218,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "source": [
     "colsX = [item for item in df.columns if item not in 'Machining_Process'] \r\n",
     "X = df[colsX].values\r\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(\r\n",
     "    X, y, test_size=0.3, random_state=1, stratify=y\r\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "source": [
     "sc = StandardScaler()\r\n",
     "sc.fit(X_train)\r\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "source": [
     "paramSetAll = {\r\n",
     "    \"ex1\": {\"kernel\":\"rbf\", \"gamma\": 0.01, \"C\": 10},\r\n",
@@ -286,9 +286,10 @@
     "    \"ex6\": {\"kernel\":\"rbf\", \"gamma\": 0.1, \"C\": 1},\r\n",
     "    \"ex7\": {\"kernel\":\"rbf\", \"gamma\": 0.1, \"C\": 100},\r\n",
     "    \"ex8\": {\"kernel\":\"rbf\", \"gamma\": 0.1, \"C\": 1000},\r\n",
-    "    \"ex9\": {\"kernel\":\"poly\", \"degree\": 3, \"C\": 10},\r\n",
-    "    \"ex10\": {\"kernel\":\"poly\", \"degree\": 4, \"C\": 10},\r\n",
-    "    \"ex11\": {\"kernel\":\"poly\", \"degree\": 5, \"C\": 10},\r\n",
+    "    \"ex9\": {\"kernel\":\"rbf\", \"gamma\": 0.01, \"C\": 1000},\r\n",
+    "    \"ex10\": {\"kernel\":\"poly\", \"degree\": 3, \"C\": 10},\r\n",
+    "    \"ex11\": {\"kernel\":\"poly\", \"degree\": 4, \"C\": 10},\r\n",
+    "    \"ex12\": {\"kernel\":\"poly\", \"degree\": 5, \"C\": 10},\r\n",
     "}"
    ],
    "outputs": [],
@@ -296,9 +297,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "source": [
-    "cl = list(range(9,10))\r\n",
+    "#cl = list(range(9,10))\r\n",
+    "cl = [8,9]\r\n",
     "ca = [ f'ex{i}' for i in cl]\r\n",
     "paramSet = { k: paramSetAll[k] for k in ca} \r\n",
     "print(paramSet)"
@@ -308,7 +310,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'ex9': {'kernel': 'poly', 'degree': 3, 'C': 10}}\n"
+      "{'ex8': {'kernel': 'rbf', 'gamma': 0.1, 'C': 1000}, 'ex9': {'kernel': 'rbf', 'gamma': 0.01, 'C': 1000}}\n"
      ]
     }
    ],
@@ -316,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "source": [
     "for paramName, paramValue in paramSet.items():\r\n",
     "    # Extract parameteres\r\n",
@@ -344,9 +346,13 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[LibSVM]Parameters: {'kernel': 'poly', 'degree': 3, 'C': 10}\n",
-      "Misclassified examples: 5345\n",
-      "Accuracy score: 0.29541260216187715\n",
+      "[LibSVM]Parameters: {'kernel': 'rbf', 'gamma': 0.1, 'C': 1000}\n",
+      "Misclassified examples: 4607\n",
+      "Accuracy score: 0.39269707355655153\n",
+      "--------------------------------------------------\n",
+      "[LibSVM]Parameters: {'kernel': 'rbf', 'gamma': 0.01, 'C': 1000}\n",
+      "Misclassified examples: 4892\n",
+      "Accuracy score: 0.3551278671236488\n",
       "--------------------------------------------------\n"
      ]
     }
