--- a/Topic 02 - Classification/T53_Random_Forest_Iris_Multiclass_Full.ipynb
+++ b/Topic 02 - Classification/T53_Random_Forest_Iris_Multiclass_Full.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Support Vector Machine\r\n",
+    "# Random Forest\r\n",
     "- Iris dataset\r\n",
     "- All features\r\n",
     "- Multiclass"
