--- a/Topic 02 - Classification/T63_KNN_Iris_Multiclass_Full.ipynb
+++ b/Topic 02 - Classification/T63_KNN_Iris_Multiclass_Full.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Decision Tree\r\n",
+    "# KNN\r\n",
     "- Iris dataset\r\n",
     "- All features\r\n",
     "- Multiclass"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "source": [
     "import numpy as np\r\n",
     "import matplotlib.pyplot as plt\r\n",
@@ -21,15 +21,14 @@
     "from sklearn.preprocessing import StandardScaler\r\n",
     "from sklearn.metrics import accuracy_score\r\n",
     "from PlotFunction import plot_decision_surface_train_test\r\n",
-    "from sklearn.tree import DecisionTreeClassifier\r\n",
-    "from sklearn import tree"
+    "from sklearn.neighbors import KNeighborsClassifier"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "source": [
     "import os\r\n",
     "imagePath = os.path.join(os.getcwd(),'Images')\r\n",
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "source": [
     "# Read data\r\n",
     "iris = datasets.load_iris()"
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 22,
    "source": [
     "# Extract all columns\r\n",
     "X = iris.data\r\n",
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 23,
    "source": [
     "# Split data into training and testing data\r\n",
     "X_train, X_test, y_train, y_test = train_test_split(\r\n",
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 24,
    "source": [
     "# Standardization\r\n",
     "sc = StandardScaler()\r\n",
@@ -87,18 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "source": [
     "paramSetAll = {\r\n",
-    "    \"ex1\": {\"criterion\": \"gini\", \"max_depth\": None, \"min_samples_split\": 2},\r\n",
-    "    \"ex2\": {\"criterion\": \"gini\",\r\n",
-    "            \"max_depth\": None,\r\n",
-    "            \"min_samples_split\": 2, \r\n",
-    "            \"random_state\":2,\r\n",
-    "            \"splitter\":\"random\",\r\n",
-    "            \"min_samples_leaf\":1},\r\n",
-    "    \"ex3\": {\"criterion\": \"gini\", \"max_depth\": None, \"min_samples_split\": 2},\r\n",
-    "\r\n",
+    "    \"ex1\": {\"n_neighbors\": 1, \"p\": 2, \"algorithm\": \"auto\",},\r\n",
+    "    \"ex2\": {\"n_neighbors\": 3, \"p\": 2, \"algorithm\": \"auto\",},\r\n",
+    "    \"ex3\": {\"n_neighbors\": 5, \"p\": 2, \"algorithm\": \"auto\",},\r\n",
+    "    \"ex4\": {\"n_neighbors\": 5, \"p\": 1, \"algorithm\": \"auto\",},\r\n",
+    "    \"ex5\": {\"n_neighbors\": 6, \"p\": 2, \"algorithm\": \"auto\",},\r\n",
+    "    \"ex6\": {\"n_neighbors\": 8, \"p\": 2, \"algorithm\": \"auto\",},\r\n",
     "}"
    ],
    "outputs": [],
@@ -106,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "source": [
     "#cl = list(range(1,5))\r\n",
     "#ca = [ f'ex{i}' for i in cl]\r\n",
@@ -119,7 +115,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'ex1': {'criterion': 'gini', 'max_depth': None, 'min_samples_split': 2}, 'ex2': {'criterion': 'gini', 'max_depth': None, 'min_samples_split': 2, 'random_state': 2, 'splitter': 'random', 'min_samples_leaf': 1}, 'ex3': {'criterion': 'gini', 'max_depth': None, 'min_samples_split': 2}}\n"
+      "{'ex1': {'n_neighbors': 1, 'p': 2, 'algorithm': 'auto'}, 'ex2': {'n_neighbors': 3, 'p': 2, 'algorithm': 'auto'}, 'ex3': {'n_neighbors': 5, 'p': 2, 'algorithm': 'auto'}, 'ex4': {'n_neighbors': 5, 'p': 1, 'algorithm': 'auto'}, 'ex5': {'n_neighbors': 6, 'p': 2, 'algorithm': 'auto'}, 'ex6': {'n_neighbors': 7, 'p': 2, 'algorithm': 'auto'}}\n"
      ]
     }
    ],
@@ -127,11 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "source": [
     "for ex, paramValue in paramSet.items():\r\n",
     "    # Create object\r\n",
-    "    clf = DecisionTreeClassifier(**paramValue)\r\n",
+    "    clf = KNeighborsClassifier(**paramValue)\r\n",
     "    # Training\r\n",
     "    clf.fit(X_train_std, y_train)\r\n",
     "    # Prediction\r\n",
@@ -149,14 +145,23 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Misclassified examples: 1\n",
-      "Accuracy score: 0.9777777777777777\n",
+      "Misclassified examples: 3\n",
+      "Accuracy score: 0.9333333333333333\n",
       "-------------------------------------\n",
-      "Misclassified examples: 1\n",
-      "Accuracy score: 0.9777777777777777\n",
+      "Misclassified examples: 2\n",
+      "Accuracy score: 0.9555555555555556\n",
       "-------------------------------------\n",
-      "Misclassified examples: 1\n",
-      "Accuracy score: 0.9777777777777777\n",
+      "Misclassified examples: 3\n",
+      "Accuracy score: 0.9333333333333333\n",
+      "-------------------------------------\n",
+      "Misclassified examples: 2\n",
+      "Accuracy score: 0.9555555555555556\n",
+      "-------------------------------------\n",
+      "Misclassified examples: 2\n",
+      "Accuracy score: 0.9555555555555556\n",
+      "-------------------------------------\n",
+      "Misclassified examples: 2\n",
+      "Accuracy score: 0.9555555555555556\n",
       "-------------------------------------\n"
      ]
     }
