--- a/Topic 03 - Data Preprocessing/C53 - Feature selection - Importance.ipynb
+++ b/Topic 03 - Data Preprocessing/C53 - Feature selection - Importance.ipynb
@@ -35,7 +35,7 @@
     "dfX = pd.DataFrame(data=X, columns=dataObj.feature_names)\r\n",
     "\r\n",
     "# Split\r\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\r\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0, stratify=y)\r\n",
     "\r\n",
     "# Standardization\r\n",
     "stdsc = StandardScaler()\r\n",
