--- a/Topic 13 - TensorFlow/iris_tf_dataset.ipynb
+++ b/Topic 13 - TensorFlow/iris_tf_dataset.ipynb
@@ -37,7 +37,7 @@
    "execution_count": 3,
    "source": [
     "Xy_train_ori = iris.take(100)\r\n",
-    "Xy_test_ori = iris.take(50)"
+    "Xy_test_ori = iris.skip(100)"
    ],
    "outputs": [],
    "metadata": {}
